--- a/textchange/templates/textchange/contactpost.html
+++ b/textchange/templates/textchange/contactpost.html
@@ -2,7 +2,7 @@
 
     {% block content %}
 
-    <div class="post_container">
+    <div class="content_container">
       <div class="post_info">
         <h3>Textbook Info</h3>
           <p><strong>Textbook: </strong>{{ posting.textbook.textbook_name|title }}</p>
