--- a/textchange/templates/textchange/wishlisting.html
+++ b/textchange/templates/textchange/wishlisting.html
@@ -1,7 +1,8 @@
 {% extends "textchange/base.html" %}
 
     {% block content %}
-
+    <div class="content_container">
+      <div class="manage_container">
       <div class="">
       <h2>Your Postings and Wishlist</h2>
       <span>You can manage your postings and wishes here...</span><br />
@@ -31,5 +32,9 @@
           </table>
         </div>
       </div>
+    </div>
+
+
+    </div>
 
       {% endblock %}
