--- a/textchange/static/textchange/mycss.css
+++ b/textchange/static/textchange/mycss.css
@@ -1,46 +1,82 @@
-body {
+html, body {
   margin: 0;
   font-family: 'SourceSansPro';
+  height: 100%;
 }
-
 @font-face {
   font-family: 'SourceSansPro';
   src: url('fonts/SourceSansPro-Regular.ttf');
 }
-.select2-dropdown.select2-dropdown--below {
-  float: right;
-  right: 0px;
+@font-face {
+  font-family: 'SourceSansPro-SemiBold';
+  src: url('fonts/SourceSansPro-Semibold.ttf');
 }
 
-.container {
-  background-color: #DADADA;
-  width: 100%;
-  margin: 0 auto;
-  height: 100vh;
-  top: 50px;
+.content_outer {
+  text-align: center;
 }
 
+.content_container {
+  min-height: calc(100%-50px);
+  height: calc(100%-50px);
+  float: middle;
+  top: 20px;
+  position: relative;
+  width: auto;
+  display: inline-block;
+  margin: auto;
+  padding: 30px 20px 30px 20px;
+  border-radius: 4px;
+  background-color: grey;
+}
+
+.results_container {
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 460px;
+}
 .results_table {
-  width: calc(100%-80px);
-  margin: 0px 40px 0px 40px;
   border-collapse: collapse;
+  width: 100%;
 }
 .results_table td {
   background-color: white;
-  height: 30px;
+  height: 20px;
 }
 .results_table td a {
-  display: block;
-  padding: 5px;
   color: black;
   text-decoration: none;
+}
+.results_table td {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  max-width: 200px;
+}
+.results_column1 {
+  width: 70%;
+  min-width: 210px;
+}
+.results_column1 a {
+  float: left;
+  padding: 2px;
+}
+.results_column2 {
+  width: 30%;
+  min-width: 100px;
+}
+.results_column2 a {
+  float: right;
+  padding: 2px;
+}
+.results_returned p {
+  float: left;
+  clear: both;
 }
 .results_table .results_top-left {
   border-top: 1px black solid;
   border-left: 1px black solid;
-}
-.results_table .results_top-middle {
-  border-top: 1px black solid;
 }
 .results_table .results_top-right {
   border-top: 1px black solid;
@@ -50,13 +86,46 @@ body {
   border-bottom: 1px black solid;
   border-left: 1px black solid;
 }
-.results_table .results_bottom-middle {
-  border-bottom: 1px black solid;
-}
 .results_table .results_bottom-right {
   border-bottom: 1px black solid;
   border-right: 1px black solid;
 }
+
+
+.help_content {
+  padding: 0 20px 0 20px;
+}
+.contact_content {
+  padding: 0 20px 0 20px;
+}
+.manage_container {
+  max-width: 460px;
+  min-width: 320px;
+  width: auto;
+  margin: auto;
+  height: 340px;
+}
+
+.feedback {
+  margin: auto;
+  width: 500px;
+}
+.feedback_field {
+  width: 195px;
+  border-radius: 3px;
+  border: none;
+  background-color: #ffffff;
+}
+.feedback_textarea {
+  width: 495px;
+  border-radius: 3px;
+  border: none;
+  background-color: #ffffff;
+}
+.feedback_submit {
+  float: right;
+}
+
 
 .post_container {
   width: 600px;
@@ -66,11 +135,23 @@ body {
 }
 
 .login_container {
-  width: 400px;
-  margin-left: auto;
-  margin-right: auto;
-  height: 500px;
   background-color: white;
+}
+.login_container p {
+  text-align: center;
+  padding: 0 10px 0 10px;
+}
+.login_container h2 {
+  text-align: center;
+}
+.login_container a {
+  display: block;
+}
+
+.login_container .login_emoji {
+  font-size: 28px;
+  padding-top: 50px;
+  text-align: center;
 }
 
 .post_info {
@@ -82,92 +163,112 @@ body {
   float: right;
 }
 
-.column3 {
-  float: right;
-}
-
 .posting_form {
-  top: 200px;
-  height: 100%;
+  max-width: 400px;
+  min-width: 320px;
+  width: auto;
 }
-
-.contact {
-  display: inline;
-  width: calc(50% - 15px);
-  float: left;
-  padding: 15px 0 0 10px;
-}
-.contact_in {
-  color: black;
-}
-.help_in {
-  color: black;
-  margin-left: 10px;
-}
-.facebook {
-  display: inline;
-  top: 10px;
-  width: 30px;
-}
-.facebook_block {
-  width: 30px;
-  margin-top: 10px;
-}
-.color {
-  display: inline;
-  width: calc(50% - 60px);
-  float: right;
-  margin: 15px 10px 0 0;
-}
-.color_in {
-  float: right;
-  display: inline;
-  margin-right: 20px;
-  color: black;
-  text-decoration: underline;
-  cursor: pointer;
-}
-
-.leftheader {
-  float: left;
-  padding: 10px 0 0 10px;
-  display: inline-block;
-}
-
-.header_in {
-  margin-top: 4px;
-  text-decoration: none;
-  font-size: 24px;
-  color: black;
-}
-
-.rightheader {
-  float: right;
-  padding: 10px 10px 0 0;
-  display: inline-block;
-}
-
-.input_form {
+.add_posting_field {
   border: none;
-  border-radius: 10px 0 0 10px;
+  border-radius: 3px;
+  width:100%;
+  box-sizing:border-box;
+  -moz-box-sizing:border-box;
+}
+.add_posting_button {
+  margin-left: auto;
+  margin-right: auto;
+  border: none;
+  background-color: #fff;
+  height: 24px;
+  width: 120px;
+}
+.add_posting_button_container {
+  text-align: center;
+}
+
+.results-search-form {
+  width: 100%;
+  height: 44px;
+  position: relative;
+  margin: auto;
+  display: block;
+  text-align: center;
+  vertical-align: middle;
+  background-color: white;
+}
+.results-search-form .input_form {
+  border: none;
   background-color: #ffffff;
-  height: 40px;
-  width: 280px;
+  height: 34px;
+  top: 4px;
+  position: relative;
+  padding-left: 5px;
+  width: 260px;
+  font-size: 15px;
+}
+.results-search-form .input_form_school {
+  background-color: #ffffff;
+  height: 36px;
+  margin-left: -5px;
+  position: relative;
+  border: none;
+  top: 4px;
+  width: 220px;
+  font-size: 15px;
+  border-left: 1px solid black;
+}
+.results-search-form #search {
+  border: none;
+  background-color: #ffffff;
+  height: 36px;
+  width: 42px;
+  top: 3px;
+  border-left: 1px solid black;
+  margin-left: -5px;
+  position: relative;
+  display: inline-block;
+  background-image: url("search.svg");
+  background-size: 26px 26px;
+  background-repeat: no-repeat;
+  background-position: 6px 6px;
+  line-height: 0px;
+  text-indent: -250px;
 }
 
-.input_form_school {
+.index-search-form-container {
+  width: 100%;
+  height: 75%;
+  margin: auto;
+  display: inline-flex;
+}
+.index-search-form {
+  width: 540px;
+  display: block;
+  text-align: center;
+  margin: auto;
+  height: 300px;
+}
+.index-search-form .input_form {
   border: none;
-  border-left: 1px solid black;
+  border-radius: 10px 10px 10px 10px;
   background-color: #ffffff;
   height: 42px;
-  width: 200px;
-  margin-left: -5px;
+  width: 260px;
+  padding-left: 10px;
+  font-size: 15px;
 }
-
-#search {
+.index-search-form .input_form_school {
+  border-radius: 10px 0 0 10px;
+  background-color: #ffffff;
+  height: 44px;
+  width: 220px;
+  font-size: 15px;
+}
+.index-search-form #search {
   border: none;
   border-left: 1px solid black;
-  border-radius: 0 10px 10px 0;
+  border-radius: 0px 10px 10px 0;
   background-color: #ffffff;
   height: 42px;
   width: 42px;
@@ -176,70 +277,114 @@ body {
   background-image: url("search.svg");
   background-size: 26px 26px;
   background-repeat: no-repeat;
+  background-position: 6px 6px;
+  padding: 16px;
+  line-height: 0px;
+  text-indent: -250px;
 }
 
-.search_image {
-  margin-bottom: -9px;
-  padding-top: 8px;
-}
-
-.index-search-form-container {
-  display: table;
-  width: 100%;
-  height: calc(100vh - 100px);
-}
-
-.index-search-form {
-  display: table-cell;
-  text-align: center;
-  vertical-align: middle;
-}
-
-.results-search-form-container {
-  position: relative;
-  display: table;
-  width: 100%;
-  height: 30px;
-  top: 50px;
-  padding: 15px 0 15px 0;
-}
-
-.results-search-form {
-  display: table-cell;
-  text-align: center;
-  vertical-align: middle;
-}
-
-.results_container {
-  position: relative;
-  top: 30px;
-  padding-top: 15px;
-  width: 600px;
-  margin-left: auto;
-  margin-right: auto;
-}
 
 .booktosell {
-  padding-top: 10px;
   font-size: 18px;
 }
 
+
+.footer {
+  bottom: 0px;
+  height: 12%;
+  width: 100%;
+  position: relative;
+  background-color: #DADADA;
+}
+.footer_invisible {
+  bottom: 0px;
+  height: 12%;
+  width: 100%;
+  position: relative;
+  background-color: transparent;
+}
+.contact {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  padding: 0 0 4% 4%;
+}
+.contact_in {
+  color: black;
+  text-decoration: none;
+}
+.help_in {
+  color: black;
+  text-decoration: none;
+  margin-left: 10px;
+}
+.facebook {
+  position: absolute;
+  width: 30px;
+  bottom: 0;
+  left: calc(50% - 15px);
+  padding: 0 0 4% 0;
+}
+.facebook_block {
+  width: 30px;
+}
+.color {
+  width: 120px;
+  bottom: 0;
+  right: 0;
+  padding: 0 4% 4% 0;
+  position: absolute;
+}
+.color_in {
+  float: right;
+  display: inline;
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
 .header {
   height: 50px;
   top: 0px;
   width: 100%;
-  background-color: #DADADA;
+  background-color: #FFF;
+  border-bottom: 1px grey solid;
 }
-
-.footer {
+.header_invisible {
+  height: 12%;
+  top: 0px;
+  width: 100%;
+  background-color: transparent;
+}
+.header .leftheader {
   float: left;
-  bottom: 0px;
-  height: 50px;
-  position: fixed;
-  width: 100vw;
-  background-color: #DADADA;
+  padding: 10px 0 0 10px;
+}
+.header_invisible .leftheader {
+  float: left;
+  padding: 4% 0 0 4%;
   display: inline-block;
 }
+.header_in {
+  text-decoration: none;
+  font-size: 25px;
+  color: black;
+  font-family: 'SourceSansPro-SemiBold';
+}
+.header .rightheader {
+  float: right;
+  display: inline-block;
+  padding: 14px 10px 0 0;
+}
+.header_invisible .rightheader {
+  float: right;
+  padding: 4% 4% 0 0;
+  display: inline-block;
+}
+
+
+
+
+
 /* ############ DROPDOWN ################## */
 
 /* Dropdown Button */
@@ -256,6 +401,7 @@ body {
 }
 
 /* The container <div> - needed to position the dropdown content */
+
 .dropdown {
     position: relative;
     display: inline-block;
