--- a/textchange/templates/500.html
+++ b/textchange/templates/500.html
@@ -3,7 +3,7 @@
   {% include "textchange/head.html" %}
   <body>
 
-    <div class="container">
+    <div class="content_container">
       {% include "textchange/navbar.html" %}
       <div class="">
         <h1>500 Server Error.</h1>
