styling index and results

--- a/textchange/templates/textchange/about.html
+++ b/textchange/templates/textchange/about.html
@@ -1,7 +1,9 @@
 {% extends "textchange/base.html" %}
 
     {% block content %}
-    <div class="content_container">
+    <div class="content_outer">
+      <div class="content_container">
+        <div class="about_page">
       <h2>Contact Me!</h2>
       <p>Hello visitor!</p>
       <p>My name is Joe and I am a 3rd year software engineering student studying at the University of Victoria. Texchange was designed
@@ -30,9 +32,6 @@
         </div>
       </form>
     </div>
-
-    </br>
-
-        <p>Honourable mentions go out to Konrad Schultz, Daniel Bolink, and Curtis St. Pierre for helping me on some of the problems I ran into.</p>
+  </div>
 </div>
       {% endblock %}
