--- a/textchange/templates/textchange/head.html
+++ b/textchange/templates/textchange/head.html
@@ -24,17 +24,17 @@
 
   <script>
   function getColor() {
-    var rand = localStorage.getItem("funColor");
-    if(rand) {
-      document.getElementsByTagName("BODY")[0].style.background = rand;
-    }
-  }
-
-  function changeColor() {
-    colors = ["#DFF6A1", "#91DE91", "#7CBABD"];
-    var rand = colors[Math.floor(Math.random() * colors.length)];
-    document.getElementsByTagName("BODY")[0].style.background = rand;
-    localStorage.setItem("funColor", rand);
+  //   var rand = localStorage.getItem("funColor");
+  //   if(rand) {
+  //     document.getElementsByTagName("BODY")[0].style.background = rand;
+  //   }
+  // }
+  //
+  // function changeColor() {
+  //   colors = ["#DFF6A1", "#91DE91", "#7CBABD"];
+  //   var rand = colors[Math.floor(Math.random() * colors.length)];
+  //   document.getElementsByTagName("BODY")[0].style.background = rand;
+  //   localStorage.setItem("funColor", rand);
   }
   </script>
 
