--- a/textchange/templates/textchange/login.html
+++ b/textchange/templates/textchange/login.html
@@ -1,9 +1,11 @@
-{% extends "textchange/base.html" %}
+<!DOCTYPE html>
+<html lang="en">
+  {% include "textchange/head.html" %}
 
-    {% block content %}
+  <body onload="getColor()">
 
 <div class="content_outer">
-  <div class="content_container">
+  <div class="content_container login_content_container">
       <div class="login_container">
         <h2>Texchange</h2>
         <p>We don't like this part either but, this is to connect you with other great people on texchange.</p>
@@ -14,4 +16,9 @@
     </div>
   </div>
 
-      {% endblock %}
+
+    </body>
+    </div> <!-- /container -->
+
+  </body>
+  </html>
