--- a/textchange/static/textchange/mycss.css
+++ b/textchange/static/textchange/mycss.css
@@ -2,6 +2,7 @@ html, body {
   margin: 0;
   font-family: 'SourceSansPro';
   height: 100%;
+  background-color: #FBFBFB;
 }
 @font-face {
   font-family: 'SourceSansPro';
@@ -22,6 +23,9 @@ html, body {
   display: inline-block;
   margin: auto;
   background-color: white;
+  padding-bottom: 40px;
+  border-radius: 8px;
+  border: 1px solid #BDBDBD
 }
 
 .results_container {
@@ -29,6 +33,11 @@ html, body {
   width: 80vw;
   min-width: 360px;
   max-width: 660px;
+  border-radius: 8px;
+}
+.results_outer_content {
+  background-color: #FBFBFB;
+  border: none;
 }
 .results_table {
   border-collapse: collapse;
@@ -58,17 +67,9 @@ html, body {
   padding-bottom: 6px;
   padding-top: 2px;
 }
-.results_column1 {
-  width: 70%;
-  min-width: 210px;
-}
 .results_column1 a {
   float: left;
   padding-left: 9px;
-}
-.results_column2 {
-  width: 30%;
-  min-width: 100px;
 }
 .results_column2 a {
   float: right;
@@ -77,31 +78,85 @@ html, body {
 .results_returned span {
   float: left;
   clear: both;
+  font-size: 18px;
+  padding-left: 10px;
+  padding-bottom: 5px;
+  padding-top: 5px;
+  font-family: 'SourceSansPro';
 }
 .results_table .results_top-left {
-  border-top: 1px black solid;
-  border-left: 1px black solid;
+  border-top: 1px grey solid;
+  border-left: 1px grey solid;
+}
+table tr:last-child td:first-child {
+    border-bottom-left-radius: 10px;
+}
+table tr:last-child td:last-child {
+    border-bottom-right-radius: 10px;
 }
 .results_table .results_top-right {
-  border-top: 1px black solid;
-  border-right: 1px black solid;
+  border-top: 1px grey solid;
+  border-right: 1px grey solid;
 }
 .results_table .results_bottom-left {
-  border-bottom: 1px black solid;
-  border-left: 1px black solid;
+  border-bottom: 1px grey solid;
+  border-left: 1px grey solid;
 }
 .results_table .results_bottom-right {
-  border-bottom: 1px black solid;
-  border-right: 1px black solid;
+  border-bottom: 1px grey solid;
+  border-right: 1px grey solid;
+}
+
+.content_container.login_content_container {
+  top: 160px;
+}
+.help_page {
+  width: 80vw;
+  min-width: 260px;
+  max-width: 600px;
+  padding: 20px;
+  background-color: white;
+  text-align: center;
+  border-radius: 8px;
+}
+.help_page p, li, h1, h2, span {
+  text-align: left;
+}
+.help_page span {
+  display: block;
+}
+.help_page span a {
+  color: grey;
+  text-decoration: none;
+  line-height: 24px;
+}
+.help_page a {
+  color: black;
+  text-decoration: none;
+}
+.help_page a:hover {
+  color: black;
+}
+.help_page hr {
+  margin-top: 15px;
+  margin-bottom: 5px;
 }
 
 
-.help_content {
-  padding: 0 20px 0 20px;
+.about_page {
+  width: 80vw;
+  min-width: 260px;
+  max-width: 600px;
+  padding: 20px;
+  background-color: white;
+  text-align: center;
+  border-radius: 8px;
 }
-.contact_content {
-  padding: 0 20px 0 20px;
+.about_page p {
+  text-align: left;
 }
+
+
 .manage_container {
   max-width: 460px;
   min-width: 320px;
@@ -136,6 +191,7 @@ html, body {
   margin-left: auto;
   margin-right: auto;
   height: 100%;
+  border-radius: 8px;
 }
 
 .login_container {
@@ -144,6 +200,7 @@ html, body {
   width: 80vw;
   min-width: 360px;
   max-width: 500px;
+  border-radius: 8px;
 }
 .login_container p {
   text-align: center;
@@ -172,16 +229,43 @@ html, body {
 }
 
 .posting_form {
+  width: 80vw;
+  min-width: 260px;
   max-width: 400px;
-  min-width: 320px;
+  padding: 20px;
+  background-color: white;
+  text-align: center;
+  border-radius: 8px;
+}
+.add_posting_table {
+  width: 80vw;
+  min-width: 200px;
+  max-width: 400px;
+  margin: 0 auto;
+}
+.add_postings_fields {
+}
+.add_posting_labels {
+  float: right;
+  font-size: 18px;
+}
+.add_posting_comments_field {
+  border: none;
+  border-radius: 3px;
   width: auto;
+  height: 100px;
+  box-sizing:border-box;
+  -moz-box-sizing:border-box;
 }
 .add_posting_field {
   border: none;
   border-radius: 3px;
-  width:100%;
+  width: 100%;
+  height: 28px;
+  margin-left: 10px;
   box-sizing:border-box;
   -moz-box-sizing:border-box;
+  border: 1px solid #BDBDBD;
 }
 .add_posting_button {
   margin-left: auto;
@@ -197,13 +281,14 @@ html, body {
 
 .results-search-form {
   width: 100%;
-  height: 44px;
+  padding-bottom: 6px;
   position: relative;
   margin: auto;
   display: block;
   text-align: center;
   vertical-align: middle;
   background-color: white;
+  border-bottom: 1px solid #E3E3E3;
 }
 .results-search-form .input_form {
   border: none;
@@ -211,11 +296,13 @@ html, body {
   height: 34px;
   top: 4px;
   position: relative;
-  padding-left: 5px;
+  padding-left: 8px;
   width: 45vw;
   max-width: 400px;
-  min-width: 180px;
+  min-width: 222px;
   font-size: 15px;
+  border-left: 1px solid #DBDBDB;
+  border-right: 1px solid #DBDBDB;
 }
 .results-search-form .input_form_school {
   background-color: #ffffff;
@@ -225,10 +312,11 @@ html, body {
   border: none;
   top: 4px;
   width: 30vw;
-  min-width: 140px;
+  min-width: 180px;
   max-width: 220px;
   font-size: 15px;
-  border-left: 1px solid black;
+  border-left: 1px solid #DBDBDB;
+  border-right: 1px solid #DBDBDB;
 }
 .results-search-form #search {
   border: none;
@@ -236,7 +324,8 @@ html, body {
   height: 36px;
   width: 42px;
   top: 3px;
-  border-left: 1px solid black;
+  border-left: 1px solid #DBDBDB;
+  border-right: 1px solid #DBDBDB;
   margin-left: -5px;
   position: relative;
   display: inline-block;
@@ -248,6 +337,10 @@ html, body {
   text-indent: -250px;
 }
 
+.search_wrapper {
+  width: 30vw;
+  background-color: white;
+}
 .index-search-form-container {
   width: 100%;
   height: 75%;
@@ -258,49 +351,66 @@ html, body {
   display: block;
   text-align: center;
   margin: auto;
-  height: 300px;
+  height: 130px;
+}
+.school_form_wrapper {
+  display: inline-block;
+  margin-left: -7px;
 }
 .index-search-form .input_form {
   border: none;
-  border-radius: 10px 10px 10px 10px;
+  border-radius: 4px 4px 4px 4px;
   background-color: #ffffff;
-  height: 42px;
+  height: 40px;
   width: 45vw;
-  max-width: 400px;
-  min-width: 300px;
+  max-width: 380px;
+  min-width: 210px;
   padding-left: 10px;
+  margin-bottom: 5px;
   font-size: 15px;
+  border-right: 1px solid #DBDBDB
+  z-index: 10;
+}
+.input_form_school option {
+  text-align: right;
+  font-size: 14px;
+  border-radius: 0px 4px 4px 0px;
 }
 .index-search-form .input_form_school {
-  border-radius: 10px 0 0 10px;
+  border-radius: 4px 0 0 4px;
   background-color: #ffffff;
-  height: 44px;
-  width: 25vw;
-  max-width: 200px;
+  height: 42px;
+  width: 35vw;
+  max-width: 240px;
   min-width: 170px;
-  font-size: 15px;
+  padding-left: 6px;
+  font-size: 14px;
+  border: none;
 }
 .index-search-form #search {
   border: none;
-  border-left: 1px solid black;
-  border-radius: 0px 10px 10px 0;
+  border-left: 1px solid #DBDBDB;
+  border-radius: 0px 4px 4px 0;
   background-color: #ffffff;
   height: 42px;
   width: 42px;
   display: inline-block;
-  margin-left: -5px;
+  margin-left: -4px;
+  padding-bottom: 0px;
   background-image: url("search.svg");
   background-size: 26px 26px;
   background-repeat: no-repeat;
-  background-position: 6px 6px;
-  padding: 16px;
-  line-height: 0px;
+  background-position: 7px 7px;
   text-indent: -250px;
 }
 
 
 .booktosell {
   font-size: 18px;
+  padding: 0px 10px 0px 10px;
+}
+.booktosell a {
+  color: black;
 }
 
 
@@ -362,7 +472,9 @@ html, body {
   top: 0px;
   width: 100%;
   background-color: #FFF;
-  border-bottom: 1px grey solid;
+  position: relative;
+  z-index: 1;
+  box-shadow: 0 1px 3px 0 rgba(166, 166, 166, 0.20);
 }
 .header_invisible {
   height: 12%;
@@ -390,6 +502,10 @@ html, body {
   display: inline-block;
   padding: 14px 10px 0 0;
 }
+.rightheader a {
+  color: black;
+  text-decoration: none;
+}
 .header_invisible .rightheader {
   float: right;
   padding: 4% 4% 0 0;
@@ -410,9 +526,10 @@ html, body {
 }
 
 /* Dropdown button on hover & focus */
-.dropbtn:hover, .dropbtn:focus {
+.dropbtn:hover, .dropbtn:focus, .dropbtn:active {
     background-color: #f1f1f1;
-    border-radius: 4px;
+    border-radius: 2px;
+    padding: 2px;
 }
 
 /* The container <div> - needed to position the dropdown content */
@@ -436,7 +553,7 @@ html, body {
 /* Links inside the dropdown */
 .dropdown-content a {
     color: black;
-    padding: 3px 4px;
+    padding: 6px 8px;
     text-decoration: none;
     display: block;
 }
