--- a/textchange/static/textchange/mycss.css
+++ b/textchange/static/textchange/mycss.css
@@ -4,6 +4,9 @@ html, body {
   height: 100%;
   background-color: #FBFBFB;
 }
+input, select, textarea {
+  outline: 0;
+}
 @font-face {
   font-family: 'SourceSansPro';
   src: url('fonts/SourceSansPro-Regular.ttf');
@@ -11,6 +14,14 @@ html, body {
 @font-face {
   font-family: 'SourceSansPro-SemiBold';
   src: url('fonts/SourceSansPro-Semibold.ttf');
+}
+
+#landing_page {
+  background: linear-gradient(180deg, #4EA9F6 , #3583D0);
+}
+
+.grey-text {
+  color: #7D7D7D;
 }
 
 .content_outer {
@@ -39,76 +50,102 @@ html, body {
   background-color: #FBFBFB;
   border: none;
 }
-.results_table {
-  border-collapse: collapse;
-  width: 100%;
+.results_returned {
+  text-align: left;
+  padding-bottom: 4px;
+  font-size: 18px;
+}
+.noresults {
+  float: right;
+  padding-bottom: 4px;
+  color: red;
+}
+.results_table div {
+  height: 30px;
+  display: inline-block;
+  background-color: white;
+}
+.results_table div:first-child {
+  border-radius: 5px 0 0 0;
+}
+.results_table div:nth-child(2) {
+  border-radius: 0 5px 0 0;
+}
+.results_table div:last-child {
+  border-radius: 0 0 5px 0;
+}
+.results_table div:nth-last-child(2) {
+  border-radius: 0 0 0 5px;
 }
 .results_table a {
+  float: inherit;
+  width: 100%;
+  text-align: left;
   text-decoration: none;
+  padding-top: 4px;
+  padding-bottom: 4px;
 }
-.results_table td {
-  background-color: white;
-  height: 20px;
-}
-.results_table td {
+.results_top-left {
+  float: left;
+  white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-  white-space: nowrap;
+  width: calc(100% - 70px);
+  border-top: 1px solid #E3E3E3;
+  border-left: 1px solid #E3E3E3;
 }
-.results_row1 a {
+.results_top-left a {
+  padding-left: 8px;
   color: black;
-  font-size: 18px;
-  padding-top: 6px;
-  padding-bottom: 2px;
+
 }
-.results_row2 a {
-  color: grey;
-  font-size: 15px;
-  padding-bottom: 6px;
-  padding-top: 2px;
-}
-.results_column1 a {
+.results_bottom-left {
   float: left;
-  padding-left: 9px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  width: calc(100% - 142px);
+  border-left: 1px solid #E3E3E3;
 }
-.results_column2 a {
+.results_bottom-left a {
+  padding-left: 8px;
+}
+.results_top-right {
   float: right;
-  padding-right: 9px;
+  width: 68px;
+  border-top: 1px solid #E3E3E3;
+  border-right: 1px solid #E3E3E3;
 }
-.results_returned span {
-  float: left;
-  clear: both;
-  font-size: 18px;
-  padding-left: 10px;
-  padding-bottom: 5px;
-  padding-top: 5px;
-  font-family: 'SourceSansPro';
+.results_top-right a {
+  padding-right: 8px;
+  color: black;
+  text-align: right;
+  padding-left: 8px;
 }
-.results_table .results_top-left {
-  border-top: 1px grey solid;
-  border-left: 1px grey solid;
+.results_bottom-right {
+  float: right;
+  width: 140px;
+  border-right: 1px solid #E3E3E3;
 }
-table tr:last-child td:first-child {
-    border-bottom-left-radius: 10px;
-}
-table tr:last-child td:last-child {
-    border-bottom-right-radius: 10px;
-}
-.results_table .results_top-right {
-  border-top: 1px grey solid;
-  border-right: 1px grey solid;
-}
-.results_table .results_bottom-left {
-  border-bottom: 1px grey solid;
-  border-left: 1px grey solid;
-}
-.results_table .results_bottom-right {
-  border-bottom: 1px grey solid;
-  border-right: 1px grey solid;
+.results_bottom-right a {
+  padding-right: 8px;
+  text-align: right;
+  padding-left: 8px;
 }
 
 .content_container.login_content_container {
-  top: 160px;
+  top: 20vh;
+}
+.close_login {
+  width: 15px;
+  height: 15px;
+  display: block;
+  position: absolute;
+  top: -8px;
+  right: 12px;
+  background-image: url("close-global.svg");
+  background-repeat: no-repeat;
+  background-position: top right;
 }
 .help_page {
   width: 80vw;
@@ -198,25 +235,90 @@ table tr:last-child td:last-child {
   background-color: white;
   position: relative;
   width: 80vw;
-  min-width: 360px;
-  max-width: 500px;
+  min-width: 310px;
+  max-width: 420px;
+  padding: 0 30px 0 30px;
+  height: 400px;
   border-radius: 8px;
 }
 .login_container p {
   text-align: center;
-  padding: 0 10px 0 10px;
 }
 .login_container h2 {
+  padding-top: 15px;
   text-align: center;
 }
 .login_container a {
   display: block;
+  text-decoration: none;
 }
 
 .login_container .login_emoji {
-  font-size: 28px;
-  padding-top: 50px;
-  text-align: center;
+  width: 22px;
+  height: 22px;
+  display: block;
+  position: absolute;
+  background-image: url("smiley-global.svg");
+  background-repeat: no-repeat;
+  background-size: 20px 20px;
+  bottom: 0px;
+  left: calc(50% - 11px);
+}
+.facebook_login {
+  background-color: #4267B2;
+  box-shadow: 0px 1px 5px 0px rgb(166, 166, 166, 0.30);
+  color: #ffffff;
+  height: 60px;
+  max-width: 380px;
+  width: 100%;
+  min-width: 300px;
+  border-radius: 6px;
+  position: relative;
+  top: 15px;
+  border: 1px solid #4267B2;
+  display: block;
+  background-image: url("facebook-login.svg");
+  background-position: 18px 18px;
+  background-repeat: no-repeat;
+  margin: auto;
+}
+.login_container br {
+  margin-top: 3px;
+}
+.primary_facebook {
+  color: white;
+  position: relative;
+  left: 58px;
+  top: 13px;
+}
+.secondary_facebook {
+   font-size: 15px;
+   color: #D2D2D2;
+}
+.google_login span {
+  color: grey;
+  position: relative;
+  left: 58px;
+  top: 16px;
+}
+.google_login {
+  margin-bottom: 3px;
+  background-color: #ffffff;
+  box-shadow: 0px 1px 5px 0px rgb(166, 166, 166, 0.20);
+  color: #ffffff;
+  height: 60px;
+  max-width: 380px;
+  width: 100%;
+  min-width: 300px;
+  border-radius: 6px;
+  border: 1px solid #E6E6E6;
+  position: relative;
+  top: 30px;
+  display: block;
+  background-image: url("google-login.svg");
+  background-position: 18px 18px;
+  margin: auto;
+  background-repeat: no-repeat;
 }
 
 .post_info {
@@ -230,12 +332,18 @@ table tr:last-child td:last-child {
 
 .posting_form {
   width: 80vw;
-  min-width: 260px;
+  min-width: 200px;
   max-width: 400px;
   padding: 20px;
   background-color: white;
   text-align: center;
   border-radius: 8px;
+}
+.add_a_textbook {
+  font-family: 'SourceSansPro-SemiBold';
+  display: block;
+  margin-bottom: 12px;
+  font-size: 20px;
 }
 .add_posting_table {
   width: 80vw;
@@ -244,173 +352,73 @@ table tr:last-child td:last-child {
   margin: 0 auto;
 }
 .add_postings_fields {
+  float: right;
 }
 .add_posting_labels {
+  width: 80px;
+  float: left;
+}
+.add_posting_labels label {
   float: right;
-  font-size: 18px;
+  line-height: 25px;
+  padding-right: 5px;
 }
 .add_posting_comments_field {
   border: none;
   border-radius: 3px;
   width: auto;
   height: 100px;
-  box-sizing:border-box;
-  -moz-box-sizing:border-box;
+  width: 98%;
+  max-width: 98%;
+  padding: 5px;
+  border: 1px solid #BDBDBD;
+  margin-top: 15px;
+}
+.posting_comments label {
+  left: 0px;
+  position: absolute;
+  padding-left: 20px;
+  margin-top: 15px;
 }
 .add_posting_field {
-  border: none;
   border-radius: 3px;
-  width: 100%;
   height: 28px;
-  margin-left: 10px;
-  box-sizing:border-box;
-  -moz-box-sizing:border-box;
+  width: calc(100% - 82px);
+  background-color: white;
   border: 1px solid #BDBDBD;
+}
+.add_posting_image_field {
+  width: calc(100% - 90px);
+}
+.add_posting_submit {
+  float: right;
+  display: inline-block;
+}
+.cancel_button {
+  padding-top: 4px;
+  padding-bottom: 8px;
+  width: 100px;
+  display: inline-block;
+  border: 1px solid #BDBDBD;
+  border-radius: 4px;
 }
 .add_posting_button {
   margin-left: auto;
-  margin-right: auto;
   border: none;
-  background-color: #fff;
-  height: 24px;
-  width: 120px;
+  height: 34px;
+  margin-top: 5px;
+  display: inline-block;
+  width: 100px;
+  background-color: green;
+  border-radius: 4px;
 }
 .add_posting_button_container {
   text-align: center;
 }
 
-.results-search-form {
-  width: 100%;
-  padding-bottom: 6px;
-  position: relative;
-  margin: auto;
-  display: block;
-  text-align: center;
-  vertical-align: middle;
-  background-color: white;
-  border-bottom: 1px solid #E3E3E3;
-}
-.results-search-form .input_form {
-  border: none;
-  background-color: #ffffff;
-  height: 34px;
-  top: 4px;
-  position: relative;
-  padding-left: 8px;
-  width: 45vw;
-  max-width: 400px;
-  min-width: 222px;
-  font-size: 15px;
-  border-left: 1px solid #DBDBDB;
-  border-right: 1px solid #DBDBDB;
-}
-.results-search-form .input_form_school {
-  background-color: #ffffff;
-  height: 36px;
-  margin-left: -5px;
-  position: relative;
-  border: none;
-  top: 4px;
-  width: 30vw;
-  min-width: 180px;
-  max-width: 220px;
-  font-size: 15px;
-  border-left: 1px solid #DBDBDB;
-  border-right: 1px solid #DBDBDB;
-}
-.results-search-form #search {
-  border: none;
-  background-color: #ffffff;
-  height: 36px;
-  width: 42px;
-  top: 3px;
-  border-left: 1px solid #DBDBDB;
-  border-right: 1px solid #DBDBDB;
-  margin-left: -5px;
-  position: relative;
-  display: inline-block;
-  background-image: url("search.svg");
-  background-size: 26px 26px;
-  background-repeat: no-repeat;
-  background-position: 6px 6px;
-  line-height: 0px;
-  text-indent: -250px;
-}
-
-.search_wrapper {
-  width: 30vw;
-  background-color: white;
-}
-.index-search-form-container {
-  width: 100%;
-  height: 75%;
-  margin: auto;
-  display: inline-flex;
-}
-.index-search-form {
-  display: block;
-  text-align: center;
-  margin: auto;
-  height: 130px;
-}
-.school_form_wrapper {
-  display: inline-block;
-  margin-left: -7px;
-}
-.index-search-form .input_form {
-  border: none;
-  border-radius: 4px 4px 4px 4px;
-  background-color: #ffffff;
-  height: 40px;
-  width: 45vw;
-  max-width: 380px;
-  min-width: 210px;
-  padding-left: 10px;
-  margin-bottom: 5px;
-  font-size: 15px;
-  border-right: 1px solid #DBDBDB
-  z-index: 10;
-}
-.input_form_school option {
-  text-align: right;
-  font-size: 14px;
-  border-radius: 0px 4px 4px 0px;
-}
-.index-search-form .input_form_school {
-  border-radius: 4px 0 0 4px;
-  background-color: #ffffff;
-  height: 42px;
-  width: 35vw;
-  max-width: 240px;
-  min-width: 170px;
-  padding-left: 6px;
-  font-size: 14px;
-  border: none;
-}
-.index-search-form #search {
-  border: none;
-  border-left: 1px solid #DBDBDB;
-  border-radius: 0px 4px 4px 0;
-  background-color: #ffffff;
-  height: 42px;
-  width: 42px;
-  display: inline-block;
-  margin-left: -4px;
-  padding-bottom: 0px;
-  background-image: url("search.svg");
-  background-size: 26px 26px;
-  background-repeat: no-repeat;
-  background-position: 7px 7px;
-  text-indent: -250px;
-}
-
-
 .booktosell {
   font-size: 18px;
   padding: 0px 10px 0px 10px;
-}
-.booktosell a {
-  color: black;
 }
 
 
@@ -435,23 +443,11 @@ table tr:last-child td:last-child {
   padding: 0 0 4% 4%;
 }
 .contact_in {
-  color: black;
   text-decoration: none;
 }
 .help_in {
-  color: black;
   text-decoration: none;
   margin-left: 10px;
-}
-.facebook {
-  position: absolute;
-  width: 30px;
-  bottom: 0;
-  left: calc(50% - 15px);
-  padding: 0 0 4% 0;
-}
-.facebook_block {
-  width: 30px;
 }
 .color {
   width: 120px;
@@ -463,18 +459,18 @@ table tr:last-child td:last-child {
 .color_in {
   float: right;
   display: inline;
-  color: black;
   text-decoration: none;
   cursor: pointer;
 }
 .header {
-  height: 50px;
+  height: 65px;
   top: 0px;
   width: 100%;
   background-color: #FFF;
   position: relative;
   z-index: 1;
   box-shadow: 0 1px 3px 0 rgba(166, 166, 166, 0.20);
+  border-bottom: 1px solid #E3E3E3;
 }
 .header_invisible {
   height: 12%;
@@ -484,7 +480,7 @@ table tr:last-child td:last-child {
 }
 .header .leftheader {
   float: left;
-  padding: 10px 0 0 10px;
+  padding: 18px 0 0 22px;
 }
 .header_invisible .leftheader {
   float: left;
@@ -494,13 +490,12 @@ table tr:last-child td:last-child {
 .header_in {
   text-decoration: none;
   font-size: 25px;
-  color: black;
   font-family: 'SourceSansPro-SemiBold';
 }
 .header .rightheader {
   float: right;
   display: inline-block;
-  padding: 14px 10px 0 0;
+  padding: 22px 22px 0 0;
 }
 .rightheader a {
   color: black;
@@ -520,7 +515,6 @@ table tr:last-child td:last-child {
 
 /* Dropdown Button */
 .dropbtn {
-    color: black;
     font-size: 16px;
     cursor: pointer;
 }
