--- a/textchange/templates/textchange/addposting.html
+++ b/textchange/templates/textchange/addposting.html
@@ -4,32 +4,36 @@
   <div class="content_outer">
     <div class="content_container">
       <div class="posting_form">
-        <span>Add a textbook</span>
+        <span class="add_a_textbook">Add a textbook</span>
         <form action="{% url 'textchange:addposting' %}" method="POST" enctype="multipart/form-data"> {% csrf_token %}
-          <table class="add_posting_table">
+          <div class="add_posting_table">
           {% for field in form %}
             {% if field.name = 'comments' %}
-              </table>
+          </div>
+          <div class="posting_comments">
               {{ field.label_tag}}
               </br>
               {{ field }}
+          </div>
             {% else %}
-              <tr>
-                <td class="add_posting_labels">
+                <div class="add_posting_labels">
                   {{ field.label_tag }}
-                </td>
-                <td class="add_posting_fields">
+                </div>
+                <div class="add_posting_fields">
                   {{ field }}
                   <span style="color: red;">{{ field.errors }}</span>
                   </br>
                 {% if field.name != 'image' %}
                   </br>
                 {% endif %}
-                </td>
+                </div>
             {% endif %}
           {% endfor %}
           <div class="add_posting_button_container">
+            <div class="add_posting_submit">
+            <a class="cancel_button" href="{% url 'textchange:index' %}">Cancel</a>
             <input type="submit" value="Add a Posting" class="add_posting_button"></input>
+          </div>
           </div>
         </form>
       </div>
